src/test/deca/syntax/valid/SansObjet/DeclVar-Bool.deca
// Description:
//    Boolean Variable declaration
//
// Results:
//    nothing
//
// Historique:
//    cree le 11/01/2022

{
        boolean x = true;
        boolean y = false;
}
