src/test/deca/syntax/invalid/SansObjet/DeclVar-Resrved2.deca
// Description:
//    Variable declaration using reserved token
//
// Results:
//    Parser error on println line 11
//
// Historique:
//    cree le 11/01/2022

{
        float println;
}
